Update to JDK 17 to work with 5.6-SNAPSHOT